Small typo corrections

--- a/phase-2-project.ipynb
+++ b/phase-2-project.ipynb
@@ -10,7 +10,7 @@
     "* Student name: Adam Pell\n",
     "* Student pace: Self Paced\n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: Morgan Smith\n",
+    "* Instructor name: Morgan Jones\n",
     "* Blog post URL:\n"
    ]
   },
@@ -2465,13 +2465,6 @@
     "- apell7591@gmail.com\n",
     "- 917-434-6615"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
