changed next steps bullets

--- a/phase-2-project.ipynb
+++ b/phase-2-project.ipynb
@@ -2452,7 +2452,7 @@
     "\n",
     "- Close analysis of ZIP codes/location\n",
     "- Addition of noise pollution metrics to the model\n",
-    "- Feature engineering to improve model prediction capabilities"
+    "- Different modeling techniques"
    ]
   },
   {
