final corrections and spacing checks

--- a/phase-2-project.ipynb
+++ b/phase-2-project.ipynb
@@ -941,7 +941,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.370\n",
       "Method:                 Least Squares   F-statistic:                 1.773e+04\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:30   Log-Likelihood:            -4.4912e+05\n",
+      "Time:                        11:02:37   Log-Likelihood:            -4.4912e+05\n",
       "No. Observations:               30155   AIC:                         8.982e+05\n",
       "Df Residuals:                   30153   BIC:                         8.983e+05\n",
       "Df Model:                           1                                         \n",
@@ -1131,7 +1131,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.386\n",
       "Method:                 Least Squares   F-statistic:                 1.898e+04\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:32   Log-Likelihood:                -19148.\n",
+      "Time:                        11:02:38   Log-Likelihood:                -19148.\n",
       "No. Observations:               30155   AIC:                         3.830e+04\n",
       "Df Residuals:                   30153   BIC:                         3.832e+04\n",
       "Df Model:                           1                                         \n",
@@ -1194,7 +1194,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.432\n",
       "Method:                 Least Squares   F-statistic:                 2.297e+04\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:32   Log-Likelihood:            -2.0814e+05\n",
+      "Time:                        11:02:38   Log-Likelihood:            -2.0814e+05\n",
       "No. Observations:               30155   AIC:                         4.163e+05\n",
       "Df Residuals:                   30153   BIC:                         4.163e+05\n",
       "Df Model:                           1                                         \n",
@@ -1330,7 +1330,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.402\n",
       "Method:                 Least Squares   F-statistic:                     5073.\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:33   Log-Likelihood:            -4.4834e+05\n",
+      "Time:                        11:02:39   Log-Likelihood:            -4.4834e+05\n",
       "No. Observations:               30155   AIC:                         8.967e+05\n",
       "Df Residuals:                   30150   BIC:                         8.967e+05\n",
       "Df Model:                           4                                         \n",
@@ -2041,7 +2041,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.462\n",
       "Method:                 Least Squares   F-statistic:                     3699.\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:34   Log-Likelihood:            -4.4675e+05\n",
+      "Time:                        11:02:41   Log-Likelihood:            -4.4675e+05\n",
       "No. Observations:               30155   AIC:                         8.935e+05\n",
       "Df Residuals:                   30147   BIC:                         8.936e+05\n",
       "Df Model:                           7                                         \n",
@@ -2431,7 +2431,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.462\n",
       "Method:                 Least Squares   F-statistic:                     3699.\n",
       "Date:                Wed, 17 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        10:22:36   Log-Likelihood:            -4.4675e+05\n",
+      "Time:                        11:02:43   Log-Likelihood:            -4.4675e+05\n",
       "No. Observations:               30155   AIC:                         8.935e+05\n",
       "Df Residuals:                   30147   BIC:                         8.936e+05\n",
       "Df Model:                           7                                         \n",
@@ -2474,14 +2474,15 @@
     "Not surprisingly, the key takeaways are that space and quality really add value. But how do these findings affect our clients?\n",
     "\n",
     "### Buyers\n",
-    "Buyers have a lot to pay attention to when looking for a prospective home. Not only should the design and layout speak to them, but they really need the home to preserve its value over time. Therefore, according to the Pell & Associates Realty analysis, buyers should pay a lot of attention to a home's grade. As evidenced in the dataset, King County assigns these grades to every home in the record. When touring, prospective buyers should demand to see the grade, as it not only provides vital information on the quality of the home, but also is a key factor in increasing or decreasing that home's value in the event of an purchase offer or future sale. Of course, having a nice view would help as well, but that is secondary in significance and can also be harder to come by.\n",
-    "\n",
     "**Prospective buyers should primarily be asking about the quality of a home's base attributes and finishes.**\n",
     "\n",
-    "### Sellers\n",
-    "Sellers have more control over how their home looks and presents on the market. In light of that, they can look beyond the grade and prioritize physical and cosmetic improvements. This includes things like \"condition\", livable square feet, and bathrooms. The King County Assessor defines condition as a function of a home's maintenance: Have faulty appliances been repaired? Has the home been touched up and renovated? These are the types of question an assessor would ask. These are also questions you are likely to get from interested buyers. As a seller, you want to make sure your home is in tip-top shape when it hits the market. That doesn't just mean repainting-- sellers should ensure all appliances are up-to-date and working well. Our analysis indicates that the value a good condition grade adds to a home is quite significant, potentially far outstripping the cost of renovations.\n",
+    "Buyers have a lot to pay attention to when looking for a prospective home. Not only should the design and layout speak to them, but they really need the home to preserve its value over time. Therefore, according to the Pell & Associates Realty analysis, buyers should pay a lot of attention to a home's grade. As evidenced in the dataset, King County assigns these grades to every home in the record. When touring, prospective buyers should demand to see the grade, as it not only provides vital information on the quality of the home, but also is a key factor in increasing or decreasing that home's value in the event of an purchase offer or future sale. Of course, having a nice view would help as well, but that is secondary in significance and can also be harder to come by.\n",
     "\n",
-    "**Overall, sellers should prioritize livable space and keep on top of maintenance and renovations.**"
+    "\n",
+    "\n",
+    "### Sellers\n",
+    "**Overall, sellers should prioritize livable space and keep on top of maintenance and renovations.**\n",
+    "Sellers have more control over how their home looks and presents on the market. In light of that, they can look beyond the grade and prioritize physical and cosmetic improvements. This includes things like \"condition\", livable square feet, and bathrooms. The King County Assessor defines condition as a function of a home's maintenance: Have faulty appliances been repaired? Has the home been touched up and renovated? These are the types of question an assessor would ask. These are also questions you are likely to get from interested buyers. As a seller, you want to make sure your home is in tip-top shape when it hits the market. That doesn't just mean repainting-- sellers should ensure all appliances are up-to-date and working well. Our analysis indicates that the value a good condition grade adds to a home is quite significant, potentially far outstripping the cost of renovations."
    ]
   },
   {
